# agentic_workflow

./: .gitignore  check_env.py  pyproject.toml  requirements.txt
scripts/: run_agent.py
src/: __init__.py  config.py
src/agent/: llm_parser.py  policy.py
src/game/: __init__.py  controller.py  snake_env.py  snake_game.py  teeworlds_env.py
src/io/: __init__.py  asr.py  tts.py  vision.py
