[project]
name = "teeworlds_agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "faster-whisper>=1.1.1",
    "gtts>=2.5.4",
    "gymnasium>=1.1.1",
    "mss>=10.0.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "pyobjc>=11.0",
    "smolagents>=1.18.0",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
]
