[project]
name = "teeworlds_agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "faster-whisper",
    "gtts",
    "gymnasium",
    "mss",
    "opencv-python",
    "pillow",
    "pyautogui",
    "pygame",
    "pyobjc",
    "scipy",
    "ray[rllib]",
    "smolagents",
    "sounddevice",
    "tensorboard",
    "tiktoken",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
]
