[project]
name = "teeworlds_agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.42.3",
    "accelerate>=0.31.0",
    "gtts",
    "gymnasium",
    "mss",
    "opencv-python",
    "pillow",
    "pygame",
    "pyobjc-core",
    "pyobjc-framework-Quartz",
    "scipy",
    "ray[rllib]",
    "sounddevice",
    "torch>=2.3.0",
    "gputil>=1.4.0",
]
